--- a/styles/basic.css
+++ b/styles/basic.css
@@ -63,8 +63,8 @@
 
 .loader {
     background-image: url('../images/loader.gif');
-    height: 42px;
-    width: 42px;
+    height: 50px;
+    width: 50px;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -100,5 +100,52 @@
     padding: 10px;
     color: #777;
     opacity: 0.75;
-    filter: alpha(opacity=50);
+    filter: alpha(opacity=25);
+}
+
+.transactionMode
+{
+    width: calc(100% - 41px);
+    float:left;
+}
+
+.fullWidth
+{
+    width: 100%;
+}
+
+.bankSelector {
+    position: relative;
+    float:left;
+    margin-left:3px;
+    margin-top: -2px;
+}
+
+.bankSelector .lister {
+    position: absolute;
+}
+
+.selectionList {
+    border: solid 1px #eee;
+    border-radius: 5px;
+    padding: 2px;
+}
+
+.selection {
+    padding: 2px;
+}
+
+.selectionList > li {
+    padding: 1px 0 1px 0;
+}
+
+.bankName {
+    display: table-cell;
+    vertical-align: middle;
+    cursor: pointer;
+}
+.action
+{
+    clear: both;
+    margin-top: 50px;
 }
