--- a/styles/basic.css
+++ b/styles/basic.css
@@ -85,6 +85,7 @@
     text-align: center;
     color: #777;
     font-size: 18px;
+    padding-bottom: 10px;
 }
 
 .instantAdd {
@@ -130,6 +131,7 @@
     border: solid 1px #eee;
     border-radius: 5px;
     padding: 2px;
+    background:rgba(255,255,255,0.5); 
 }
 
 .selection {
