--- a/styles/basic.css
+++ b/styles/basic.css
@@ -6,9 +6,9 @@
 
 .oneDay{
     border-radius: 5px;
-    border: 1px solid rgba(231, 231, 231, 0.5);
+    border: 1px solid #e7e7e7;
     margin: 2px 2px 5px 2px;
-    background-color: rgba(231, 231, 231, 0.5);
+    background-color: #f8f8f8;
 }
 .margin2px
 {
